--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "bufferutil": "^3.0.3",
     "discord.js": "^11.3.2",
+    "libsodium": "^0.7.4",
+    "libsodium-wrappers": "0.7.3",
     "node-fetch": "^2.1.2",
-    "promise-timeout": "^1.3.0"
+    "node-opus": "^0.2.7",
+    "opusscript": "^0.0.6",
+    "pm2": "^3.3.0",
+    "promise-timeout": "^1.3.0",
+    "sodium": "^2.0.3"
   },
   "optionalDependencies": {
-    "erlpack": "github:hammerandchisel/erlpack",
-    "uws": "^10.148.0"
+    "erlpack": "github:discordapp/erlpack",
+    "uws": "^9.148.0"
   }
 }
